--- a/WebUI/Components/Pages/Blogs/AddBlogPage.razor
+++ b/WebUI/Components/Pages/Blogs/AddBlogPage.razor
@@ -151,10 +151,10 @@
             {
                 foreach (var item in incomingFiles)
                 {
-                    double sizeInMB = (double)item.Size / (1024 * 1024);
+                    // double sizeInMB = (double)item.Size / (1024 * 1024);
 
                     // Display the toast with the size in MB
-                    await toast.ShowError($"File size exceeds 3MB. Size: {sizeInMB.ToString("0.##")} MB");
+                    // await toast.ShowError($"File size exceeds 3MB. Size: {sizeInMB.ToString("0.##")} MB");
                     // Check file size
                     if (item.Size > 3 * 1024 * 1024) // Convert 3MB to bytes
                     {
